# master_class_checkpoint1

my_rb1_description/launch/: display.launch
my_rb1_description/urdf/: my_rb1_robot.urdf  my_robot.rviz
my_rb1_gazebo/launch/: my_rb1_robot_warehouse.launch
my_rb1_ros/: CMakeLists.txt  package.xml
my_rb1_ros/launch/: rotate_service.launch
my_rb1_ros/src/: rotate_service.cpp
my_rb1_ros/srv/: Rotate.srv
